--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/stpaulme/ascension#readme",
   "devDependencies": {
+    "bootstrap": "^4.1.3",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-sass": "^4.0.1"
+    "gulp-sass": "^4.0.1",
+    "popper.js": "^1.14.4"
   },
   "dependencies": {}
 }
