--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
   "name": "ascension",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stpaulme/ascension.git"
-  },
-  "author": "",
+  "description": "Ascension",
+  "author": "Julianne Ragland",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/stpaulme/ascension/issues"
-  },
-  "homepage": "https://github.com/stpaulme/ascension#readme",
   "devDependencies": {
-    "bootstrap": "^4.3.1",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "bootstrap": "^4.5.0",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-cache": "^1.1.3",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "popper.js": "^1.14.4"
-  },
-  "dependencies": {
-    "js-yaml": "^3.13.1",
-    "svgo": "^1.2.2"
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^4.14.1"
   }
 }
